# Autonomous-Pick-and-Place-System-using-ROS-2-and-MoveIt-2-in-C-

./: README.md
src/panda_bringup/launch/: pick_and_place.launch.py
src/panda_controller/: CMakeLists.txt  package.xml
src/panda_controller/src/: slider_controller.cpp
src/panda_moveit/: CMakeLists.txt  package.xml
src/panda_moveit/launch/: client.launch.py
src/panda_moveit/src/: pick_and_place.cpp
src/panda_vision/: CMakeLists.txt  package.xml
src/panda_vision/src/: color_detector.cpp
